[package]
authors = [
    "Alex Crichton <alex@alexcrichton.com>",
    "dignifiedquire <me@dignifiequire.com>",
    "Artem Vorotnikov <artem@vorotnikov.me>",
]
documentation = "https://docs.rs/tokio-tar"
edition = "2018"
exclude = ["tests/archives/*"]
homepage = "https://github.com/vorot93/tokio-tar"
keywords = ["tar", "tarfile", "encoding"]
license = "MIT/Apache-2.0"
name = "tokio-tar"
readme = "README.md"
repository = "https://github.com/vorot93/tokio-tar"
version = "0.3.0"

description = """
A Rust implementation of an async TAR file reader and writer. This library does not
currently handle compression, but it is abstract over all I/O readers and
writers. Additionally, great lengths are taken to ensure that the entire
contents are never required to be entirely resident in memory all at once.
"""

[dependencies]
filetime = "0.2.8"
futures-core = "0.3"
tokio = { version = "1.4.0", features = ["fs", "io-util"] }
tokio-stream = { version = "0.1.5", features = ["fs"] }
tokio-util = { version = "0.6.5", features = ["io"] }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1.4.0", features = ["full"] }

[target."cfg(unix)".dependencies]
libc = "0.2"
xattr = { version = "0.2", optional = true }

[target.'cfg(target_os = "redox")'.dependencies]
redox_syscall = "0.2"

[features]
default = ["xattr"]
